proper commenting and decorators used for better documentation
