# src/components/response.ts
@@ -1,29 +1,4 @@
-namespace APIResponse {
-  export interface IResponse {
-    success: boolean
-    error?: IError
-    data?: IData
-  }
-
-  export interface IError {
-    code: string
-    message: string
-  }
-
-  export interface IData {
-    data: object
-  }
-
-  export const generateResponse = (res: IError | IData): IResponse => {
-    const defaultData: IData = {
-      data: {
-        message: "This is default API response"
-      }
-    }
-    const response = <IResponse>{}
-    response.data = defaultData
-    return response
-  }
+export interface ErrorResponse {
+  code: string
+  message: string
 }
-
-export { APIResponse }
