# src/routes/user.ts
@@ -5,25 +5,41 @@ import {
   Body,
   Query,
   Header,
+  Tags,
   Path,
   SuccessResponse,
-  Controller as Router
+  Controller as Router,
+  Response
 } from "tsoa"
-import { User, UserCreationRequest } from "../components/user"
+import {
+  getUserResponseSuccess,
+  createUserRequest,
+  createUserResponseSuccess
+} from "../components/user"
 import { UserController } from "../controllers/user"
+import { ErrorResponse } from "../components/response"
 @Route("/users")
 export class UsersRouter extends Router {
+  /**
+   * @param id Unique user id which is an uuid
+   * @minLength id 24
+   * @maxLength id 30
+   */
+  @Response<ErrorResponse>(404, "Not Found")
+  @Response<ErrorResponse>(401, "Not Authorized")
   @Get("/{id}")
-  public async getUser(@Path("id") id: number): Promise<User> {
+  public async getUser(
+    @Path("id") id: string
+  ): Promise<getUserResponseSuccess> {
     return new UserController().getUser(id)
   }
 
   @SuccessResponse("201", "Created") // Custom success response
   @Post()
   public async createUser(
-    @Body() requestBody: UserCreationRequest
-  ): Promise<void> {
+    @Body() requestBody: createUserRequest
+  ): Promise<createUserResponseSuccess> {
     this.setStatus(201) // set return status 201
-    return Promise.resolve()
+    return Promise.resolve(<createUserResponseSuccess>{})
   }
 }
